# afrim-py

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: python.yml  rust.yml
src/: config.rs  lib.rs  preprocessor.rs  translator.rs
tests/: README.md  __init__.py  conftest.py  test_config.py  test_integration.py  test_preprocessor.py  test_toml_converter.py  test_translator.py
