[package]
name = "afrim-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "afrim_py"
crate-type = ["cdylib"]

[features]
default = ["rhai", "strsim"]
strsim = ["afrim-translator/strsim"]
rhai = ["afrim-translator/rhai", "afrim-config/rhai"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
pythonize = "0.20"
indexmap = "2.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
afrim-preprocessor = { version = "0.6.2", default-features = false, features = ["serde"], git = "https://github.com/pythonbrad/afrim", rev = "448c9a4" }
afrim-translator = { version = "0.2.2", default-features = false, features = ["serde"], git = "https://github.com/pythonbrad/afrim", rev = "448c9a4" }
afrim-config = { version = "0.4.6", default-features = false, git = "https://github.com/pythonbrad/afrim", rev = "448c9a4" }
